fix: Update white-background class to reduce opacity for improved visibility

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -38,7 +38,7 @@ button {
 }
 
 .white-background {
-  background-color: rgba(230, 230, 230, 0.5);
+  background-color: rgba(230, 230, 230, 0.25);
 }
 
 .side-bar {
